--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <meta charset="utf-8" />
 
-  <link rel="stylesheet" href="./CSS/style.css">
   <link rel="normalize" href="./CSS/Normalize.css">
+  <link rel="stylesheet" href="./CSS/style.css">
 
   <!-- Code pour lecture sur pc/tablette/telephone -->
 
@@ -27,10 +27,9 @@
   <header>
     <img src="./images/logo/Booki.png" alt="logo" />
     <nav>
-      <ul class="conthead">
+      <ul class="containerhead">
         <li class="bleu"><a href="">Hébergement</a></li>
         <li><a href="">Activités</a></li>
-        </div>
       </ul>
     </nav>
   </header>
@@ -61,187 +60,167 @@
     </div>
 
 
-    <section class="cartes-hebergements">
-      <h2>Hébergements à Marseille</h2>
-      <article class="hebergements">
-        <a class="cards" href="">
-          <img class="Auberge_la_cannebiere" src="images/hebergements/4_small/Auberge_la_cannebiere.jpg">
-          <div>
+    <section>
+      <div class="titlecontainer">
+        <h2>Hébergements à Marseille</h2>
+        <h2>Les plus populaires</h2>
+      </div>
+      <div class="container">
+        <article class="hebergements">
+          <a class="cards" href="">
+            <img class="Auberge_la_cannebiere" src="images/hebergements/4_small/Auberge_la_cannebiere.jpg">
             <div>
               <h3>Auberge la cannebiere</h3>
               <span>Nuit à partir de <strong>25€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-duotone fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-duotone fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
-      <article class="hebergements">
-        <a class="cards" href="">
-          <img class="Hotel_du_port" src="./images/hebergements/4_small/Hôtel du port.jpg">
-          <div>
+        <article class="hebergements">
+          <a class="cards" href="">
+            <img class="Hotel_du_port" src="./images/hebergements/4_small/Hôtel du port.jpg">
             <div>
               <h3>Hôtel du port</h3>
               <span>Nuit à partir de <strong>52€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
-      <article class="hebergements">
-        <a class="cards" href="">
-          <img class="Hôtel_les_mouettes" src="./images/hebergements/4_small/Hôtel les mouettes.jpg">
-          <div>
+        <article class="hebergements">
+          <a class="cards" href="">
+            <img class="Hôtel_les_mouettes" src="./images/hebergements/4_small/Hôtel les mouettes.jpg">
             <div>
               <h3>Hôtel les mouettes</h3>
               <span>Nuit à partir de <strong>76€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-duotone fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-duotone fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
-      <article class="hebergements">
-        <a class="cards" href="">
-          <img class="Hôtel_de_la mer" src="./images/hebergements/4_small/Hôtel de la mer.jpg">
-          <div>
+        <article class="hebergements">
+          <a class="cards" href="">
+            <img class="Hôtel_de_la mer" src="./images/hebergements/4_small/Hôtel de la mer.jpg">
             <div>
               <h3>Hôtel de la mer</h3>
               <span>Nuit à partir de <strong>46€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-duotone fa-star"></i>
+                <i class="fa-duotone fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-duotone fa-star"></i>
-              <i class="fa-duotone fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
-      <article class="hebergements">
-        <a class="cards" href="">
-          <img class="Auberge_le_panier" src="./images/hebergements/4_small/Auberge le panier.jpg">
-          <div>
+        <article class="hebergements">
+          <a class="cards" href="">
+            <img class="Auberge_le_panier" src="./images/hebergements/4_small/Auberge le panier.jpg">
             <div>
               <h3>Auberge le panier</h3>
               <span>Nuit à partir de <strong>23€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-duotone fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-duotone fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
-      <article class="hebergements">
-        <a class="cards" href="">
-          <img class="Hôtel_chez_Amina" src="./images/hebergements/4_small/Hôtel chez Amina.jpg">
-          <div>
+        <article class="hebergements">
+          <a class="cards" href="">
+            <img class="Hôtel_chez_Amina" src="./images/hebergements/4_small/Hôtel chez Amina.jpg">
             <div>
               <h3>Hôtel chez Amina</h3>
               <span>Nuit à partir de <strong>96€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
 
-
-
-      <div>
-        <h3>Les plus populaires</h3>
-        <i class="fa-light fa-chart-line-up"></i>
-      </div>
-
-      <article class="hebergements">
-        <a href="">
-          <img class="Hôtel_le_soleil_du_matin" src="./images/hebergements/4_small/Hôtel le soleil du matin.jpg">
-          <div>
+        <article class="hebergements">
+          <a href="">
+            <img class="Hôtel_le_soleil_du_matin" src="./images/hebergements/4_small/Hôtel le soleil du matin.jpg">
             <div>
               <h3>Hôtel le soleil du matin</h3>
               <span>Nuit à partir de <strong>128€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
-      <article class="hebergements">
-        <a href="">
-          <img class="Au_coeur_de_l'eau_Chambres_d'hôtes"
-            src="./images/hebergements/4_small/Au coeur de l'eau Chambres d'hôtes.jpg">
-          <div>
+        <article class="hebergements">
+          <a href="">
+            <img class="Au_coeur_de_l'eau_Chambres_d'hôtes"
+              src="./images/hebergements/4_small/Au coeur de l'eau Chambres d'hôtes.jpg">
             <div>
               <h3>Au coeur de l'eau Chambres d'hôtes</h3>
               <span>Nuit à partir de <strong>96€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-duotone fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-duotone fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
 
-      <article class="hebergements">
-        <a href="">
-          <img class="Hôtel_tout_bleu_et_Blanc" src="./images/hebergements/4_small/Hôtel tout bleu et blanc.jpg" i>
-          <div>
+        <article class="hebergements">
+          <a href="">
+            <img class="Hôtel_tout_bleu_et_Blanc" src="./images/hebergements/4_small/Hôtel tout bleu et blanc.jpg" i>
             <div>
               <h3>Hôtel tout bleu et Blanc</h3>
               <span>Nuit à partir de <strong>68€</strong></span>
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-duotone fa-star"></i>
+              </div>
             </div>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-duotone fa-star"></i>
-            </div>
-          </div>
-        </a>
-      </article>
+          </a>
+        </article>
+      </div>
     </section>
     <h3>Afficher plus</h3>
 
